--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+.cart-no {
+  position: absolute;
+  min-height: 25px;
+  min-width: 25px;
+  border-radius: 50%;
+  font-size: 1em;
+  background-color: blue;
+  color: white;
+  text-align: center;
+  top: -12px;
+  right: 30px;
+}
