--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -6,7 +6,10 @@
   />
 
   <div class="card-body d-flex flex-column">
-    <a href="#">
+    <a
+      routerLink="/shop/{{ product.id }}"
+      routerLinkActive="router-link-active"
+    >
       <h6 class="text-uppercase">{{ product.name }}</h6>
     </a>
     <span class="mb-2">{{ product.price | currency }}</span>
@@ -16,7 +19,12 @@
         type="button"
         class="btn btn-sm btn-outline-secondary fa fa-shopping-cart mr-2"
       ></button>
-      <button type="button" class="btn btn-sm btn-outline-secondary">
+      <button
+        type="button"
+        routerLink="/shop/{{ product.id }}"
+        routerLinkActive="router-link-active"
+        class="btn btn-sm btn-outline-secondary"
+      >
         View
       </button>
     </div>
