Section 12: 1. Changed theme 2. Added loading indicator 3. Added Home component 4. Added Breadcrumbs 5. UI changes

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -10,3 +10,18 @@
   top: -12px;
   right: 30px;
 }
+
+.xng-breadcrumb-root {
+  padding: 8px 16px;
+  display: inline;
+  border-radius: 0;
+}
+
+.xng-breadcrumb-trail {
+  margin-bottom: 0;
+  color: orange !important;
+}
+
+.xng-breadcrumb-seperator {
+  padding: 0 0;
+}
