--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,6 @@
+<ngx-spinner> Loading... </ngx-spinner>
 <app-nav-bar></app-nav-bar>
-<div class="container-fluid" style="margin-top: 140px">
+<app-section-header></app-section-header>
+<div>
   <router-outlet></router-outlet>
 </div>
