--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,9 +1,25 @@
 <div class="card h-100 shadow-sm">
-  <img
-    src="{{ product.pictureUrl }}"
-    alt="{{ product.name }}"
-    class="img-fluid bg-info"
-  />
+  <div class="image position-relative" syle="cursor: pointer">
+    <img
+      src="{{ product.pictureUrl }}"
+      alt="{{ product.name }}"
+      class="img-fluid bg-info"
+    />
+    <div class="d-flex align-items-center justify-content-center hover-overlay">
+      <button
+        type="button"
+        class="btn btn-sm btn-primary fa fa-shopping-cart mr-2"
+      ></button>
+      <button
+        type="button"
+        routerLink="/shop/{{ product.id }}"
+        routerLinkActive="router-link-active"
+        class="btn btn-sm btn-primary"
+      >
+        View
+      </button>
+    </div>
+  </div>
 
   <div class="card-body d-flex flex-column">
     <a
@@ -13,20 +29,5 @@
       <h6 class="text-uppercase">{{ product.name }}</h6>
     </a>
     <span class="mb-2">{{ product.price | currency }}</span>
-
-    <div class="btn-group">
-      <button
-        type="button"
-        class="btn btn-sm btn-outline-secondary fa fa-shopping-cart mr-2"
-      ></button>
-      <button
-        type="button"
-        routerLink="/shop/{{ product.id }}"
-        routerLinkActive="router-link-active"
-        class="btn btn-sm btn-outline-secondary"
-      >
-        View
-      </button>
-    </div>
   </div>
 </div>
