--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,41 +1,43 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <section class="col-3">
-      <h5 class="text-warning">Filter</h5>
-      <select
-        class="custom-select my-2"
-        (change)="onSortSelected($event.target.value)"
-      >
-        <option *ngFor="let opt of sortOptions" [value]="opt.value">
-          {{ opt.name }}
-        </option>
-      </select>
-
-      <h5 class="text-warning">Brands</h5>
-      <ul class="list-group my-3">
-        <li
-          class="list-group-item"
-          *ngFor="let brand of brands"
-          [class.active]="brand.id === shopParams.brandId"
-          [value]="brand.id"
-          (click)="onBrandSelected(brand.id)"
+      <ng-container *ngIf="brands && productTypes">
+        <h5 class="text-warning ml-3 mt-3 mb-4">Filter</h5>
+        <select
+          class="custom-select my-2"
+          (change)="onSortSelected($event.target.value)"
         >
-          {{ brand.name }}
-        </li>
-      </ul>
+          <option *ngFor="let opt of sortOptions" [value]="opt.value">
+            {{ opt.name }}
+          </option>
+        </select>
 
-      <h5 class="text-warning">Product Types</h5>
-      <ul class="list-group my-3">
-        <li
-          class="list-group-item"
-          *ngFor="let productType of productTypes"
-          [class.active]="productType.id === shopParams.productTypeId"
-          [value]="productType.id"
-          (click)="onProductTypeSelected(productType.id)"
-        >
-          {{ productType.name }}
-        </li>
-      </ul>
+        <h5 class="text-warning">Brands</h5>
+        <ul class="list-group my-3">
+          <li
+            class="list-group-item"
+            *ngFor="let brand of brands"
+            [class.active]="brand.id === shopParams.brandId"
+            [value]="brand.id"
+            (click)="onBrandSelected(brand.id)"
+          >
+            {{ brand.name }}
+          </li>
+        </ul>
+
+        <h5 class="text-warning">Product Types</h5>
+        <ul class="list-group my-3">
+          <li
+            class="list-group-item"
+            *ngFor="let productType of productTypes"
+            [class.active]="productType.id === shopParams.productTypeId"
+            [value]="productType.id"
+            (click)="onProductTypeSelected(productType.id)"
+          >
+            {{ productType.name }}
+          </li>
+        </ul>
+      </ng-container>
     </section>
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
@@ -46,17 +48,21 @@
         >
         </app-page-header>
 
-        <div class="form-inline">
+        <div class="form-inline" *ngIf="products">
           <input
             #search
-            (keyup.enter) = "onSearch()"
+            (keyup.enter)="onSearch()"
             type="text"
             class="form-control mr-2"
             style="width: 300px"
             placeholder="Search"
           />
-          <button (click) = "onSearch()" class="btn btn-outline-primary my-2">Search</button>
-          <button (click) = "onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
+          <button (click)="onSearch()" class="btn btn-outline-primary my-2">
+            Search
+          </button>
+          <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">
+            Reset
+          </button>
         </div>
       </div>
       <div class="row">
